- Fix first and last columns - Add overflow and border

--- a/imports/plugins/included/default-theme/client/styles/dashboard/orders.less
+++ b/imports/plugins/included/default-theme/client/styles/dashboard/orders.less
@@ -813,7 +813,7 @@
 
   .order-table-thead {
     // border-top: 1px solid @black10;
-    // border-right: 1px solid @black10;
+    border-right: 1px solid @black10;
     border-left: 1px solid @black10;
   }
 
@@ -828,7 +828,7 @@
   }
 
   .order-table-tr-group {
-    // border-right: 1px solid @black10;
+    border-right: 1px solid @black10;
     border-left: 1px solid @black10;
   }
 
